[package]
name = "sn_node_rpc_data_types"
version = "0.0.1"
authors = ["Scorch-Dev <scorchdev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "~1.0.111", features = [ "derive" ] }
serde_with = { version = "~1.6.4", default-features = false, features = [ "hex" ] }
sn_data_types = { version = "~0.14.0" }
